# minimal-wgpu-native

./: CMakeLists.txt  LICENSE  README.md
imgui/backends/: imgui_impl_wgpu.cpp
src/: DemoFragment.cpp  DemoImgui.cpp  DemoTriangle.cpp  demo.cpp  demo.h  main.cpp
wasm/: Dockerfile  buildWASM.py
